# f1-openENV

./: .env.example  .gitignore  Dockerfile  README.md  abu_dhabi_sim.py  env.py  f1_human_eval_testing_guide.html  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  validate-submission.sh
app/: main.py
artifacts/: _tmp_logcheck_report.json  baseline_inference_report.json  baseline_inference_report_3tasks.json  baseline_inference_report_live.json  baseline_inference_report_live_seed7.json  expert_final_report.json  expert_final_scores.json  human_eval_rerun_report_2026-04-11.md  local_gemma_smoke_report.json  local_gemma_training_report.json  local_integration_report.json  local_integration_report_full.json  runtime_check_report.json  submission_report.md
scripts/: deploy_to_hf_space.py  local_integration_check.sh  set_space_secrets.py  smoke_tasks.py  train_local_gemma_policy.py  validate_submission.sh
server/: app.py
src/race_strategy_optimizer/: __init__.py  environment.py  graders.py  models.py  rewards.py  simulation.py  tasks.py
src/race_strategy_optimizer_openenv.egg-info/: SOURCES.txt  requires.txt
tests/: test_determinism.py  test_env_contract.py  test_graders.py  test_scenarios_and_observation_signals.py
