[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "race-strategy-optimizer-openenv"
version = "0.1.0"
description = "OpenEnv environment for Formula-style race strategy optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
